# rust-pdf-generator

./: Cargo.toml  Dockerfile  README.md  entrypoint.sh
src/: main.rs
